parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Wft
Rule 1     Wft -> FWft
Rule 2     Wft -> OWft
Rule 3     FWft -> AtomicName
Rule 4     FWft -> Y_WftNode
Rule 5     FWft -> Function
Rule 6     OWft -> BinaryOp
Rule 7     OWft -> NaryOp
Rule 8     OWft -> MinMaxOp
Rule 9     OWft -> CloseStmt
Rule 10    OWft -> EveryStmt
Rule 11    OWft -> SomeStmt
Rule 12    OWft -> QIdenStmt
Rule 13    BinaryOp -> Impl LParen Argument Comma Argument RParen
Rule 14    BinaryOp -> OrImpl LParen Argument Comma Argument RParen
Rule 15    BinaryOp -> AndImpl LParen Argument Comma Argument RParen
Rule 16    NaryOp -> And LParen Wfts RParen
Rule 17    NaryOp -> Or LParen Wfts RParen
Rule 18    NaryOp -> Not LParen Wfts RParen
Rule 19    NaryOp -> Nor LParen Wfts RParen
Rule 20    NaryOp -> Thnot LParen Wfts RParen
Rule 21    NaryOp -> Thnor LParen Wfts RParen
Rule 22    NaryOp -> Nand LParen Wfts RParen
Rule 23    NaryOp -> Xor LParen Wfts RParen
Rule 24    NaryOp -> DoubImpl LParen Wfts RParen
Rule 25    MinMaxOp -> AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
Rule 26    MinMaxOp -> Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
Rule 27    MinMaxOp -> Thresh LBrace Integer RBrace LParen Wfts RParen
Rule 28    EveryStmt -> Every LBrace AtomicName RBrace LParen Wfts RParen
Rule 29    EveryStmt -> Every LBrace AtomicName RBrace LParen RParen
Rule 30    SomeStmt -> Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
Rule 31    SomeStmt -> Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
Rule 32    CloseStmt -> Close LParen AtomicNameSet Comma Wft RParen
Rule 33    Function -> FWft LParen Arguments RParen
Rule 34    QIdenStmt -> QIdentifier LParen Wfts RParen
Rule 35    QIdenStmt -> QIdentifier LParen RParen
Rule 36    Argument -> Wft
Rule 37    Argument -> None
Rule 38    Argument -> ArgumentFunction
Rule 39    Argument -> LBracket RBracket
Rule 40    Argument -> LBracket Wfts RBracket
Rule 41    ArgumentFunction -> SetOf LParen RParen
Rule 42    ArgumentFunction -> SetOf LParen Wfts RParen
Rule 43    Wfts -> Wft
Rule 44    Wfts -> Wfts Comma Wft
Rule 45    Arguments -> Argument
Rule 46    Arguments -> Arguments Comma Argument
Rule 47    AtomicNameSet -> AtomicName
Rule 48    AtomicNameSet -> LParen AtomicNames RParen
Rule 49    AtomicNames -> AtomicName
Rule 50    AtomicNames -> AtomicNames Comma AtomicName
Rule 51    AtomicName -> Identifier
Rule 52    AtomicName -> Integer
Rule 53    Y_WftNode -> WftNode

Terminals, with rules where they appear

And                  : 16
AndImpl              : 15
AndOr                : 25
Close                : 32
Comma                : 13 14 15 25 26 32 44 46 50
DoubImpl             : 24
Every                : 28 29
Identifier           : 51
Impl                 : 13
Integer              : 25 25 26 26 27 52
LBrace               : 25 26 27 28 29 30 31
LBracket             : 39 40
LParen               : 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 30 31 31 32 33 34 35 41 42 48
Nand                 : 22
None                 : 37
Nor                  : 19
Not                  : 18
Or                   : 17
OrImpl               : 14
QIdentifier          : 34 35
RBrace               : 25 26 27 28 29 30 31
RBracket             : 39 40
RParen               : 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 30 31 31 32 33 34 35 41 42 48
SetOf                : 41 42
Some                 : 30 31
Thnor                : 21
Thnot                : 20
Thresh               : 26 27
WftNode              : 53
Xor                  : 23
error                : 

Nonterminals, with rules where they appear

Argument             : 13 13 14 14 15 15 45 46
ArgumentFunction     : 38
Arguments            : 33 46
AtomicName           : 3 28 29 30 30 31 31 47 49 50
AtomicNameSet        : 32
AtomicNames          : 48 50
BinaryOp             : 6
CloseStmt            : 9
EveryStmt            : 10
FWft                 : 1 33
Function             : 5
MinMaxOp             : 8
NaryOp               : 7
OWft                 : 2
QIdenStmt            : 12
SomeStmt             : 11
Wft                  : 32 36 43 44 0
Wfts                 : 16 17 18 19 20 21 22 23 24 25 26 27 28 30 34 40 42 44
Y_WftNode            : 4

Parsing method: LALR

state 0

    (0) S' -> . Wft
    (1) Wft -> . FWft
    (2) Wft -> . OWft
    (3) FWft -> . AtomicName
    (4) FWft -> . Y_WftNode
    (5) FWft -> . Function
    (6) OWft -> . BinaryOp
    (7) OWft -> . NaryOp
    (8) OWft -> . MinMaxOp
    (9) OWft -> . CloseStmt
    (10) OWft -> . EveryStmt
    (11) OWft -> . SomeStmt
    (12) OWft -> . QIdenStmt
    (51) AtomicName -> . Identifier
    (52) AtomicName -> . Integer
    (53) Y_WftNode -> . WftNode
    (33) Function -> . FWft LParen Arguments RParen
    (13) BinaryOp -> . Impl LParen Argument Comma Argument RParen
    (14) BinaryOp -> . OrImpl LParen Argument Comma Argument RParen
    (15) BinaryOp -> . AndImpl LParen Argument Comma Argument RParen
    (16) NaryOp -> . And LParen Wfts RParen
    (17) NaryOp -> . Or LParen Wfts RParen
    (18) NaryOp -> . Not LParen Wfts RParen
    (19) NaryOp -> . Nor LParen Wfts RParen
    (20) NaryOp -> . Thnot LParen Wfts RParen
    (21) NaryOp -> . Thnor LParen Wfts RParen
    (22) NaryOp -> . Nand LParen Wfts RParen
    (23) NaryOp -> . Xor LParen Wfts RParen
    (24) NaryOp -> . DoubImpl LParen Wfts RParen
    (25) MinMaxOp -> . AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (26) MinMaxOp -> . Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (27) MinMaxOp -> . Thresh LBrace Integer RBrace LParen Wfts RParen
    (32) CloseStmt -> . Close LParen AtomicNameSet Comma Wft RParen
    (28) EveryStmt -> . Every LBrace AtomicName RBrace LParen Wfts RParen
    (29) EveryStmt -> . Every LBrace AtomicName RBrace LParen RParen
    (30) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (31) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
    (34) QIdenStmt -> . QIdentifier LParen Wfts RParen
    (35) QIdenStmt -> . QIdentifier LParen RParen

    Identifier      shift and go to state 14
    Integer         shift and go to state 15
    WftNode         shift and go to state 16
    Impl            shift and go to state 17
    OrImpl          shift and go to state 18
    AndImpl         shift and go to state 19
    And             shift and go to state 20
    Or              shift and go to state 21
    Not             shift and go to state 22
    Nor             shift and go to state 23
    Thnot           shift and go to state 24
    Thnor           shift and go to state 25
    Nand            shift and go to state 26
    Xor             shift and go to state 27
    DoubImpl        shift and go to state 28
    AndOr           shift and go to state 29
    Thresh          shift and go to state 30
    Close           shift and go to state 31
    Every           shift and go to state 32
    Some            shift and go to state 33
    QIdentifier     shift and go to state 34

    Wft                            shift and go to state 1
    FWft                           shift and go to state 2
    OWft                           shift and go to state 3
    AtomicName                     shift and go to state 4
    Y_WftNode                      shift and go to state 5
    Function                       shift and go to state 6
    BinaryOp                       shift and go to state 7
    NaryOp                         shift and go to state 8
    MinMaxOp                       shift and go to state 9
    CloseStmt                      shift and go to state 10
    EveryStmt                      shift and go to state 11
    SomeStmt                       shift and go to state 12
    QIdenStmt                      shift and go to state 13

state 1

    (0) S' -> Wft .



state 2

    (1) Wft -> FWft .
    (33) Function -> FWft . LParen Arguments RParen

    $end            reduce using rule 1 (Wft -> FWft .)
    RParen          reduce using rule 1 (Wft -> FWft .)
    Comma           reduce using rule 1 (Wft -> FWft .)
    RBracket        reduce using rule 1 (Wft -> FWft .)
    LParen          shift and go to state 35


state 3

    (2) Wft -> OWft .

    $end            reduce using rule 2 (Wft -> OWft .)
    RParen          reduce using rule 2 (Wft -> OWft .)
    Comma           reduce using rule 2 (Wft -> OWft .)
    RBracket        reduce using rule 2 (Wft -> OWft .)


state 4

    (3) FWft -> AtomicName .

    LParen          reduce using rule 3 (FWft -> AtomicName .)
    $end            reduce using rule 3 (FWft -> AtomicName .)
    RParen          reduce using rule 3 (FWft -> AtomicName .)
    Comma           reduce using rule 3 (FWft -> AtomicName .)
    RBracket        reduce using rule 3 (FWft -> AtomicName .)


state 5

    (4) FWft -> Y_WftNode .

    LParen          reduce using rule 4 (FWft -> Y_WftNode .)
    $end            reduce using rule 4 (FWft -> Y_WftNode .)
    RParen          reduce using rule 4 (FWft -> Y_WftNode .)
    Comma           reduce using rule 4 (FWft -> Y_WftNode .)
    RBracket        reduce using rule 4 (FWft -> Y_WftNode .)


state 6

    (5) FWft -> Function .

    LParen          reduce using rule 5 (FWft -> Function .)
    $end            reduce using rule 5 (FWft -> Function .)
    RParen          reduce using rule 5 (FWft -> Function .)
    Comma           reduce using rule 5 (FWft -> Function .)
    RBracket        reduce using rule 5 (FWft -> Function .)


state 7

    (6) OWft -> BinaryOp .

    $end            reduce using rule 6 (OWft -> BinaryOp .)
    RParen          reduce using rule 6 (OWft -> BinaryOp .)
    Comma           reduce using rule 6 (OWft -> BinaryOp .)
    RBracket        reduce using rule 6 (OWft -> BinaryOp .)


state 8

    (7) OWft -> NaryOp .

    $end            reduce using rule 7 (OWft -> NaryOp .)
    RParen          reduce using rule 7 (OWft -> NaryOp .)
    Comma           reduce using rule 7 (OWft -> NaryOp .)
    RBracket        reduce using rule 7 (OWft -> NaryOp .)


state 9

    (8) OWft -> MinMaxOp .

    $end            reduce using rule 8 (OWft -> MinMaxOp .)
    RParen          reduce using rule 8 (OWft -> MinMaxOp .)
    Comma           reduce using rule 8 (OWft -> MinMaxOp .)
    RBracket        reduce using rule 8 (OWft -> MinMaxOp .)


state 10

    (9) OWft -> CloseStmt .

    $end            reduce using rule 9 (OWft -> CloseStmt .)
    RParen          reduce using rule 9 (OWft -> CloseStmt .)
    Comma           reduce using rule 9 (OWft -> CloseStmt .)
    RBracket        reduce using rule 9 (OWft -> CloseStmt .)


state 11

    (10) OWft -> EveryStmt .

    $end            reduce using rule 10 (OWft -> EveryStmt .)
    RParen          reduce using rule 10 (OWft -> EveryStmt .)
    Comma           reduce using rule 10 (OWft -> EveryStmt .)
    RBracket        reduce using rule 10 (OWft -> EveryStmt .)


state 12

    (11) OWft -> SomeStmt .

    $end            reduce using rule 11 (OWft -> SomeStmt .)
    RParen          reduce using rule 11 (OWft -> SomeStmt .)
    Comma           reduce using rule 11 (OWft -> SomeStmt .)
    RBracket        reduce using rule 11 (OWft -> SomeStmt .)


state 13

    (12) OWft -> QIdenStmt .

    $end            reduce using rule 12 (OWft -> QIdenStmt .)
    RParen          reduce using rule 12 (OWft -> QIdenStmt .)
    Comma           reduce using rule 12 (OWft -> QIdenStmt .)
    RBracket        reduce using rule 12 (OWft -> QIdenStmt .)


state 14

    (51) AtomicName -> Identifier .

    LParen          reduce using rule 51 (AtomicName -> Identifier .)
    $end            reduce using rule 51 (AtomicName -> Identifier .)
    RParen          reduce using rule 51 (AtomicName -> Identifier .)
    Comma           reduce using rule 51 (AtomicName -> Identifier .)
    RBrace          reduce using rule 51 (AtomicName -> Identifier .)
    RBracket        reduce using rule 51 (AtomicName -> Identifier .)


state 15

    (52) AtomicName -> Integer .

    LParen          reduce using rule 52 (AtomicName -> Integer .)
    $end            reduce using rule 52 (AtomicName -> Integer .)
    RParen          reduce using rule 52 (AtomicName -> Integer .)
    Comma           reduce using rule 52 (AtomicName -> Integer .)
    RBrace          reduce using rule 52 (AtomicName -> Integer .)
    RBracket        reduce using rule 52 (AtomicName -> Integer .)


state 16

    (53) Y_WftNode -> WftNode .

    LParen          reduce using rule 53 (Y_WftNode -> WftNode .)
    $end            reduce using rule 53 (Y_WftNode -> WftNode .)
    RParen          reduce using rule 53 (Y_WftNode -> WftNode .)
    Comma           reduce using rule 53 (Y_WftNode -> WftNode .)
    RBracket        reduce using rule 53 (Y_WftNode -> WftNode .)


state 17

    (13) BinaryOp -> Impl . LParen Argument Comma Argument RParen

    LParen          shift and go to state 36


state 18

    (14) BinaryOp -> OrImpl . LParen Argument Comma Argument RParen

    LParen          shift and go to state 37


state 19

    (15) BinaryOp -> AndImpl . LParen Argument Comma Argument RParen

    LParen          shift and go to state 38


state 20

    (16) NaryOp -> And . LParen Wfts RParen

    LParen          shift and go to state 39


state 21

    (17) NaryOp -> Or . LParen Wfts RParen

    LParen          shift and go to state 40


state 22

    (18) NaryOp -> Not . LParen Wfts RParen

    LParen          shift and go to state 41


state 23

    (19) NaryOp -> Nor . LParen Wfts RParen

    LParen          shift and go to state 42


state 24

    (20) NaryOp -> Thnot . LParen Wfts RParen

    LParen          shift and go to state 43


state 25

    (21) NaryOp -> Thnor . LParen Wfts RParen

    LParen          shift and go to state 44


state 26

    (22) NaryOp -> Nand . LParen Wfts RParen

    LParen          shift and go to state 45


state 27

    (23) NaryOp -> Xor . LParen Wfts RParen

    LParen          shift and go to state 46


state 28

    (24) NaryOp -> DoubImpl . LParen Wfts RParen

    LParen          shift and go to state 47


state 29

    (25) MinMaxOp -> AndOr . LBrace Integer Comma Integer RBrace LParen Wfts RParen

    LBrace          shift and go to state 48


state 30

    (26) MinMaxOp -> Thresh . LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (27) MinMaxOp -> Thresh . LBrace Integer RBrace LParen Wfts RParen

    LBrace          shift and go to state 49


state 31

    (32) CloseStmt -> Close . LParen AtomicNameSet Comma Wft RParen

    LParen          shift and go to state 50


state 32

    (28) EveryStmt -> Every . LBrace AtomicName RBrace LParen Wfts RParen
    (29) EveryStmt -> Every . LBrace AtomicName RBrace LParen RParen

    LBrace          shift and go to state 51


state 33

    (30) SomeStmt -> Some . LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (31) SomeStmt -> Some . LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen

    LBrace          shift and go to state 52


state 34

    (34) QIdenStmt -> QIdentifier . LParen Wfts RParen
    (35) QIdenStmt -> QIdentifier . LParen RParen

    LParen          shift and go to state 53


state 35

    (33) Function -> FWft LParen . Arguments RParen
    (45) Arguments -> . Argument
    (46) Arguments -> . Arguments Comma Argument
    (36) Argument -> . Wft
    (37) Argument -> . None
    (38) Argument -> . ArgumentFunction
    (39) Argument -> . LBracket RBracket
    (40) Argument -> . LBracket Wfts RBracket
    (1) Wft -> . FWft
    (2) Wft -> . OWft
    (41) ArgumentFunction -> . SetOf LParen RParen
    (42) ArgumentFunction -> . SetOf LParen Wfts RParen
    (3) FWft -> . AtomicName
    (4) FWft -> . Y_WftNode
    (5) FWft -> . Function
    (6) OWft -> . BinaryOp
    (7) OWft -> . NaryOp
    (8) OWft -> . MinMaxOp
    (9) OWft -> . CloseStmt
    (10) OWft -> . EveryStmt
    (11) OWft -> . SomeStmt
    (12) OWft -> . QIdenStmt
    (51) AtomicName -> . Identifier
    (52) AtomicName -> . Integer
    (53) Y_WftNode -> . WftNode
    (33) Function -> . FWft LParen Arguments RParen
    (13) BinaryOp -> . Impl LParen Argument Comma Argument RParen
    (14) BinaryOp -> . OrImpl LParen Argument Comma Argument RParen
    (15) BinaryOp -> . AndImpl LParen Argument Comma Argument RParen
    (16) NaryOp -> . And LParen Wfts RParen
    (17) NaryOp -> . Or LParen Wfts RParen
    (18) NaryOp -> . Not LParen Wfts RParen
    (19) NaryOp -> . Nor LParen Wfts RParen
    (20) NaryOp -> . Thnot LParen Wfts RParen
    (21) NaryOp -> . Thnor LParen Wfts RParen
    (22) NaryOp -> . Nand LParen Wfts RParen
    (23) NaryOp -> . Xor LParen Wfts RParen
    (24) NaryOp -> . DoubImpl LParen Wfts RParen
    (25) MinMaxOp -> . AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (26) MinMaxOp -> . Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (27) MinMaxOp -> . Thresh LBrace Integer RBrace LParen Wfts RParen
    (32) CloseStmt -> . Close LParen AtomicNameSet Comma Wft RParen
    (28) EveryStmt -> . Every LBrace AtomicName RBrace LParen Wfts RParen
    (29) EveryStmt -> . Every LBrace AtomicName RBrace LParen RParen
    (30) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (31) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
    (34) QIdenStmt -> . QIdentifier LParen Wfts RParen
    (35) QIdenStmt -> . QIdentifier LParen RParen

    None            shift and go to state 57
    LBracket        shift and go to state 59
    SetOf           shift and go to state 60
    Identifier      shift and go to state 14
    Integer         shift and go to state 15
    WftNode         shift and go to state 16
    Impl            shift and go to state 17
    OrImpl          shift and go to state 18
    AndImpl         shift and go to state 19
    And             shift and go to state 20
    Or              shift and go to state 21
    Not             shift and go to state 22
    Nor             shift and go to state 23
    Thnot           shift and go to state 24
    Thnor           shift and go to state 25
    Nand            shift and go to state 26
    Xor             shift and go to state 27
    DoubImpl        shift and go to state 28
    AndOr           shift and go to state 29
    Thresh          shift and go to state 30
    Close           shift and go to state 31
    Every           shift and go to state 32
    Some            shift and go to state 33
    QIdentifier     shift and go to state 34

    FWft                           shift and go to state 2
    Arguments                      shift and go to state 54
    Argument                       shift and go to state 55
    Wft                            shift and go to state 56
    ArgumentFunction               shift and go to state 58
    OWft                           shift and go to state 3
    AtomicName                     shift and go to state 4
    Y_WftNode                      shift and go to state 5
    Function                       shift and go to state 6
    BinaryOp                       shift and go to state 7
    NaryOp                         shift and go to state 8
    MinMaxOp                       shift and go to state 9
    CloseStmt                      shift and go to state 10
    EveryStmt                      shift and go to state 11
    SomeStmt                       shift and go to state 12
    QIdenStmt                      shift and go to state 13

state 36

    (13) BinaryOp -> Impl LParen . Argument Comma Argument RParen
    (36) Argument -> . Wft
    (37) Argument -> . None
    (38) Argument -> . ArgumentFunction
    (39) Argument -> . LBracket RBracket
    (40) Argument -> . LBracket Wfts RBracket
    (1) Wft -> . FWft
    (2) Wft -> . OWft
    (41) ArgumentFunction -> . SetOf LParen RParen
    (42) ArgumentFunction -> . SetOf LParen Wfts RParen
    (3) FWft -> . AtomicName
    (4) FWft -> . Y_WftNode
    (5) FWft -> . Function
    (6) OWft -> . BinaryOp
    (7) OWft -> . NaryOp
    (8) OWft -> . MinMaxOp
    (9) OWft -> . CloseStmt
    (10) OWft -> . EveryStmt
    (11) OWft -> . SomeStmt
    (12) OWft -> . QIdenStmt
    (51) AtomicName -> . Identifier
    (52) AtomicName -> . Integer
    (53) Y_WftNode -> . WftNode
    (33) Function -> . FWft LParen Arguments RParen
    (13) BinaryOp -> . Impl LParen Argument Comma Argument RParen
    (14) BinaryOp -> . OrImpl LParen Argument Comma Argument RParen
    (15) BinaryOp -> . AndImpl LParen Argument Comma Argument RParen
    (16) NaryOp -> . And LParen Wfts RParen
    (17) NaryOp -> . Or LParen Wfts RParen
    (18) NaryOp -> . Not LParen Wfts RParen
    (19) NaryOp -> . Nor LParen Wfts RParen
    (20) NaryOp -> . Thnot LParen Wfts RParen
    (21) NaryOp -> . Thnor LParen Wfts RParen
    (22) NaryOp -> . Nand LParen Wfts RParen
    (23) NaryOp -> . Xor LParen Wfts RParen
    (24) NaryOp -> . DoubImpl LParen Wfts RParen
    (25) MinMaxOp -> . AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (26) MinMaxOp -> . Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (27) MinMaxOp -> . Thresh LBrace Integer RBrace LParen Wfts RParen
    (32) CloseStmt -> . Close LParen AtomicNameSet Comma Wft RParen
    (28) EveryStmt -> . Every LBrace AtomicName RBrace LParen Wfts RParen
    (29) EveryStmt -> . Every LBrace AtomicName RBrace LParen RParen
    (30) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (31) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
    (34) QIdenStmt -> . QIdentifier LParen Wfts RParen
    (35) QIdenStmt -> . QIdentifier LParen RParen

    None            shift and go to state 57
    LBracket        shift and go to state 59
    SetOf           shift and go to state 60
    Identifier      shift and go to state 14
    Integer         shift and go to state 15
    WftNode         shift and go to state 16
    Impl            shift and go to state 17
    OrImpl          shift and go to state 18
    AndImpl         shift and go to state 19
    And             shift and go to state 20
    Or              shift and go to state 21
    Not             shift and go to state 22
    Nor             shift and go to state 23
    Thnot           shift and go to state 24
    Thnor           shift and go to state 25
    Nand            shift and go to state 26
    Xor             shift and go to state 27
    DoubImpl        shift and go to state 28
    AndOr           shift and go to state 29
    Thresh          shift and go to state 30
    Close           shift and go to state 31
    Every           shift and go to state 32
    Some            shift and go to state 33
    QIdentifier     shift and go to state 34

    Argument                       shift and go to state 61
    Wft                            shift and go to state 56
    ArgumentFunction               shift and go to state 58
    FWft                           shift and go to state 2
    OWft                           shift and go to state 3
    AtomicName                     shift and go to state 4
    Y_WftNode                      shift and go to state 5
    Function                       shift and go to state 6
    BinaryOp                       shift and go to state 7
    NaryOp                         shift and go to state 8
    MinMaxOp                       shift and go to state 9
    CloseStmt                      shift and go to state 10
    EveryStmt                      shift and go to state 11
    SomeStmt                       shift and go to state 12
    QIdenStmt                      shift and go to state 13

state 37

    (14) BinaryOp -> OrImpl LParen . Argument Comma Argument RParen
    (36) Argument -> . Wft
    (37) Argument -> . None
    (38) Argument -> . ArgumentFunction
    (39) Argument -> . LBracket RBracket
    (40) Argument -> . LBracket Wfts RBracket
    (1) Wft -> . FWft
    (2) Wft -> . OWft
    (41) ArgumentFunction -> . SetOf LParen RParen
    (42) ArgumentFunction -> . SetOf LParen Wfts RParen
    (3) FWft -> . AtomicName
    (4) FWft -> . Y_WftNode
    (5) FWft -> . Function
    (6) OWft -> . BinaryOp
    (7) OWft -> . NaryOp
    (8) OWft -> . MinMaxOp
    (9) OWft -> . CloseStmt
    (10) OWft -> . EveryStmt
    (11) OWft -> . SomeStmt
    (12) OWft -> . QIdenStmt
    (51) AtomicName -> . Identifier
    (52) AtomicName -> . Integer
    (53) Y_WftNode -> . WftNode
    (33) Function -> . FWft LParen Arguments RParen
    (13) BinaryOp -> . Impl LParen Argument Comma Argument RParen
    (14) BinaryOp -> . OrImpl LParen Argument Comma Argument RParen
    (15) BinaryOp -> . AndImpl LParen Argument Comma Argument RParen
    (16) NaryOp -> . And LParen Wfts RParen
    (17) NaryOp -> . Or LParen Wfts RParen
    (18) NaryOp -> . Not LParen Wfts RParen
    (19) NaryOp -> . Nor LParen Wfts RParen
    (20) NaryOp -> . Thnot LParen Wfts RParen
    (21) NaryOp -> . Thnor LParen Wfts RParen
    (22) NaryOp -> . Nand LParen Wfts RParen
    (23) NaryOp -> . Xor LParen Wfts RParen
    (24) NaryOp -> . DoubImpl LParen Wfts RParen
    (25) MinMaxOp -> . AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (26) MinMaxOp -> . Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (27) MinMaxOp -> . Thresh LBrace Integer RBrace LParen Wfts RParen
    (32) CloseStmt -> . Close LParen AtomicNameSet Comma Wft RParen
    (28) EveryStmt -> . Every LBrace AtomicName RBrace LParen Wfts RParen
    (29) EveryStmt -> . Every LBrace AtomicName RBrace LParen RParen
    (30) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (31) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
    (34) QIdenStmt -> . QIdentifier LParen Wfts RParen
    (35) QIdenStmt -> . QIdentifier LParen RParen

    None            shift and go to state 57
    LBracket        shift and go to state 59
    SetOf           shift and go to state 60
    Identifier      shift and go to state 14
    Integer         shift and go to state 15
    WftNode         shift and go to state 16
    Impl            shift and go to state 17
    OrImpl          shift and go to state 18
    AndImpl         shift and go to state 19
    And             shift and go to state 20
    Or              shift and go to state 21
    Not             shift and go to state 22
    Nor             shift and go to state 23
    Thnot           shift and go to state 24
    Thnor           shift and go to state 25
    Nand            shift and go to state 26
    Xor             shift and go to state 27
    DoubImpl        shift and go to state 28
    AndOr           shift and go to state 29
    Thresh          shift and go to state 30
    Close           shift and go to state 31
    Every           shift and go to state 32
    Some            shift and go to state 33
    QIdentifier     shift and go to state 34

    Argument                       shift and go to state 62
    Wft                            shift and go to state 56
    ArgumentFunction               shift and go to state 58
    FWft                           shift and go to state 2
    OWft                           shift and go to state 3
    AtomicName                     shift and go to state 4
    Y_WftNode                      shift and go to state 5
    Function                       shift and go to state 6
    BinaryOp                       shift and go to state 7
    NaryOp                         shift and go to state 8
    MinMaxOp                       shift and go to state 9
    CloseStmt                      shift and go to state 10
    EveryStmt                      shift and go to state 11
    SomeStmt                       shift and go to state 12
    QIdenStmt                      shift and go to state 13

state 38

    (15) BinaryOp -> AndImpl LParen . Argument Comma Argument RParen
    (36) Argument -> . Wft
    (37) Argument -> . None
    (38) Argument -> . ArgumentFunction
    (39) Argument -> . LBracket RBracket
    (40) Argument -> . LBracket Wfts RBracket
    (1) Wft -> . FWft
    (2) Wft -> . OWft
    (41) ArgumentFunction -> . SetOf LParen RParen
    (42) ArgumentFunction -> . SetOf LParen Wfts RParen
    (3) FWft -> . AtomicName
    (4) FWft -> . Y_WftNode
    (5) FWft -> . Function
    (6) OWft -> . BinaryOp
    (7) OWft -> . NaryOp
    (8) OWft -> . MinMaxOp
    (9) OWft -> . CloseStmt
    (10) OWft -> . EveryStmt
    (11) OWft -> . SomeStmt
    (12) OWft -> . QIdenStmt
    (51) AtomicName -> . Identifier
    (52) AtomicName -> . Integer
    (53) Y_WftNode -> . WftNode
    (33) Function -> . FWft LParen Arguments RParen
    (13) BinaryOp -> . Impl LParen Argument Comma Argument RParen
    (14) BinaryOp -> . OrImpl LParen Argument Comma Argument RParen
    (15) BinaryOp -> . AndImpl LParen Argument Comma Argument RParen
    (16) NaryOp -> . And LParen Wfts RParen
    (17) NaryOp -> . Or LParen Wfts RParen
    (18) NaryOp -> . Not LParen Wfts RParen
    (19) NaryOp -> . Nor LParen Wfts RParen
    (20) NaryOp -> . Thnot LParen Wfts RParen
    (21) NaryOp -> . Thnor LParen Wfts RParen
    (22) NaryOp -> . Nand LParen Wfts RParen
    (23) NaryOp -> . Xor LParen Wfts RParen
    (24) NaryOp -> . DoubImpl LParen Wfts RParen
    (25) MinMaxOp -> . AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (26) MinMaxOp -> . Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (27) MinMaxOp -> . Thresh LBrace Integer RBrace LParen Wfts RParen
    (32) CloseStmt -> . Close LParen AtomicNameSet Comma Wft RParen
    (28) EveryStmt -> . Every LBrace AtomicName RBrace LParen Wfts RParen
    (29) EveryStmt -> . Every LBrace AtomicName RBrace LParen RParen
    (30) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (31) SomeStmt -> . Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
    (34) QIdenStmt -> . QIdentifier LParen Wfts RParen
    (35) QIdenStmt -> . QIdentifier LParen RParen

    None            shift and go to state 57
    LBracket        shift and go to state 59
    SetOf           shift and go to state 60
    Identifier      shift and go to state 14
    Integer         shift and go to state 15
    WftNode         shift and go to state 16
    Impl            shift and go to state 17
    OrImpl          shift and go to state 18
    AndImpl         shift and go to state 19
    And             shift and go to state 20
    Or              shift and go to state 21
    Not             shift and go to state 22
    Nor             shift and go to state 23
    Thnot           shift and go to state 24
    Thnor           shift and go to state 25
    Nand            shift and go to state 26
    Xor             shift and go to state 27
    DoubImpl        shift and go to state 28
    AndOr           shift and go to state 29
    Thresh          shift and go to state 30
    Close           shift and go to state 31
    Every           shift and go to state 32
    Some            shift and go to state 33
    QIdentifier     shift and go to state 34

    Argument                       shift and go to state 63
    Wft                            shift and go to state 56
    ArgumentFunction               shift and go to state 58
    FWft                           shift and go to state 2
    OWft                           shift and go to state 3
    AtomicName                     shift and go to state 4
    Y_WftNode                      shift and go to state 5
    Function                       shift and go to state 6
    BinaryOp                       shift and go to state 7
    NaryOp                         shift and go to state 8
    MinMaxOp                       shift and go to state 9
    CloseStmt                      shift and go to state 10
    EveryStmt                      shift and go to state 11
    SomeStmt                       shift and go to state 12
    QIdenStmt                      shift and go to state 13

state 39
